[project]
name = "py-sse"
version = "0.1.0"
description = "Minimal Async implementation for sse_[granian refactor]"
readme = "README.md"
authors = [
    { name = "Deufel", email = "MDeufel13@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "brotli>=1.2.0",
    "granian>=2.7.2",
    "html-tags>=0.0.18",
    "requests>=2.32.5",
]

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "marimo-dev>=0.3.3",
    "marimo>=0.21.1",
    "uvicorn>=0.42.0",
]

[tool.marimo-dev]
  renames = {dunder_ = "__", internal_ = "_"}
  nbs = "notebooks"
  out = "src"